--- a/jane do.html
+++ b/jane do.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jane doe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="jane do.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <section class="wrapper">
         <div class="left">
@@ -22,10 +27,53 @@
                 <h1>Jane Doe</h1>
                 <h4>Photographer and Web Designer.</h4>
                 <a href=""><i class="fa-sharp fa-solid fa-download"></i>Download Resume</a>
-            </div class="section1">
+            </div>
+            <div class="section2">
+                <h1>My Portfolio</h1>
+                <div class="images">
+                    <div class="leftimages">
+                        <img  src="images/wedding.jpg" alt="">
+                        <img  src="images/rocks.jpg" alt="">
+                        <img  src="images/sailboat.jpg" alt="">
+                    </div>
+                    <div class="rightimages">
+                        <img  src="images/underwater.jpg" alt="">
+                        <img  src="images/chef.jpg" alt="">
+                        <img  src="images/wedding.jpg" alt="">
+                        <img  src="images/p6.jpg" alt="">
+                    </div>
+
+                </div>
+            </div>
+            <div class="section3">
+                <h1>About</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi possimus animi corrupti odio, ex nisi corporis adipisci? Corporis sunt excepturi, nihil, sint fuga et culpa sit ullam, maiores dolor repudiandae? Fugiat id nam excepturi, tenetur qui, minus quisquam cum blanditiis debitis voluptate laboriosam accusamus ea ipsa dignissimos atque quos aliquam delectus recusandae adipisci veniam! Laborum tenetur optio vel, in expedita necessitatibus non nemo totam tempora asperiores nulla sapiente accusamus! At repudiandae eligendi ratione voluptatum ipsa distinctio debitis fugit sint ducimus, laborum doloremque eum delectus natus tempora odit sapiente, aliquam earum libero possimus dolore voluptatem fuga unde? Velit debitis impedit ab.</p>
+            </div>
+            <div class="section4">
+                <h1>My Skills</h1>
+                <p class="spacing">Photography</p>
+                <div class="photo"><p>95%</p></div>
+                <p class="spacing"> Web  Design</p>
+                <div class="web"><p>85%</p></div>
+                <p class="spacing">Photoshop</p>
+                <div class="photoshop"><p>80%</p></div>
+            </div>
+            <div class="section5">
+                <div><h1>14+</h1>
+                <p>Partners</p></div>
+                <div><h1>55+</h1>
+                <p>Projects Done</p></div>
+                <div><h1>89+</h1><p>Happy Clients</p></div>
+                <div><h1>150+</h1><p>Meetings</p></div>
+            </div>
+            <div class="download">
+                <a href=""><i class="fa-sharp fa-solid fa-download"></i>Download Resume</a>
+            </div>
 
         </div>
     </section>
-    
+
+
 </body>
+
 </html>
