--- a/jane do.html
+++ b/jane do.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jane doe</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="jane do.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -32,47 +34,172 @@
                 <h1>My Portfolio</h1>
                 <div class="images">
                     <div class="leftimages">
-                        <img  src="images/wedding.jpg" alt="">
-                        <img  src="images/rocks.jpg" alt="">
-                        <img  src="images/sailboat.jpg" alt="">
+                        <img src="images/wedding.jpg" alt="">
+                        <img src="images/rocks.jpg" alt="">
+                        <img src="images/sailboat.jpg" alt="">
                     </div>
                     <div class="rightimages">
-                        <img  src="images/underwater.jpg" alt="">
-                        <img  src="images/chef.jpg" alt="">
-                        <img  src="images/wedding.jpg" alt="">
-                        <img  src="images/p6.jpg" alt="">
+                        <img src="images/underwater.jpg" alt="">
+                        <img src="images/chef.jpg" alt="">
+                        <img src="images/wedding.jpg" alt="">
+                        <img src="images/p6.jpg" alt="">
                     </div>
 
                 </div>
             </div>
             <div class="section3">
                 <h1>About</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi possimus animi corrupti odio, ex nisi corporis adipisci? Corporis sunt excepturi, nihil, sint fuga et culpa sit ullam, maiores dolor repudiandae? Fugiat id nam excepturi, tenetur qui, minus quisquam cum blanditiis debitis voluptate laboriosam accusamus ea ipsa dignissimos atque quos aliquam delectus recusandae adipisci veniam! Laborum tenetur optio vel, in expedita necessitatibus non nemo totam tempora asperiores nulla sapiente accusamus! At repudiandae eligendi ratione voluptatum ipsa distinctio debitis fugit sint ducimus, laborum doloremque eum delectus natus tempora odit sapiente, aliquam earum libero possimus dolore voluptatem fuga unde? Velit debitis impedit ab.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi possimus animi corrupti odio, ex nisi
+                    corporis adipisci? Corporis sunt excepturi, nihil, sint fuga et culpa sit ullam, maiores dolor
+                    repudiandae? Fugiat id nam excepturi, tenetur qui, minus quisquam cum blanditiis debitis voluptate
+                    laboriosam accusamus ea ipsa dignissimos atque quos aliquam delectus recusandae adipisci veniam!
+                    Laborum tenetur optio vel, in expedita necessitatibus non nemo totam tempora asperiores nulla
+                    sapiente accusamus! At repudiandae eligendi ratione voluptatum ipsa distinctio debitis fugit sint
+                    ducimus, laborum doloremque eum delectus natus tempora odit sapiente, aliquam earum libero possimus
+                    dolore voluptatem fuga unde? Velit debitis impedit ab.</p>
             </div>
             <div class="section4">
                 <h1>My Skills</h1>
                 <p class="spacing">Photography</p>
-                <div class="photo"><p>95%</p></div>
-                <p class="spacing"> Web  Design</p>
-                <div class="web"><p>85%</p></div>
+                <div class="photo">
+                    <p>95%</p>
+                </div>
+                <p class="spacing"> Web Design</p>
+                <div class="web">
+                    <p>85%</p>
+                </div>
                 <p class="spacing">Photoshop</p>
-                <div class="photoshop"><p>80%</p></div>
+                <div class="photoshop">
+                    <p>80%</p>
+                </div>
             </div>
             <div class="section5">
-                <div><h1>14+</h1>
-                <p>Partners</p></div>
-                <div><h1>55+</h1>
-                <p>Projects Done</p></div>
-                <div><h1>89+</h1><p>Happy Clients</p></div>
-                <div><h1>150+</h1><p>Meetings</p></div>
+                <div>
+                    <h1>14+</h1>
+                    <p>Partners</p>
+                </div>
+                <div>
+                    <h1>55+</h1>
+                    <p>Projects Done</p>
+                </div>
+                <div>
+                    <h1>89+</h1>
+                    <p>Happy Clients</p>
+                </div>
+                <div>
+                    <h1>150+</h1>
+                    <p>Meetings</p>
+                </div>
             </div>
             <div class="download">
                 <a href=""><i class="fa-sharp fa-solid fa-download"></i>Download Resume</a>
             </div>
+            <div class="section6">
+                <h1>My Reputation</h1>
+                <div class="s6">
+                    <div class="s6left">
+                        <img src="images/avatar_smoke.jpg" alt="">
+                    </div>
+                    <div class="s6right">
+                        <div class="bing">
+                            <h3>Chandler Bing.</h3>
+                            <p>Web Designer.</p>
+                        </div>
+                        <p>Jane Doe is just awesome.I am happy to have met her!</p>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="section6">
+                <div class="s6">
+                    <div class="s6left">
+                        <img src="images/bandmember.jpg" alt="">
+                    </div>
+                    <div class="s6right">
+                        <div class="bing">
+                            <h3>Chris Fox.</h3>
+                            <p>CEO at Mighty Schools.</p>
+                        </div>
+                        <p>Jane Doe saved us from a web disaster.</p>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="section6">
+                <div class="s6">
+                    <div class="s6left">
+                        <img src="images/avatar_g2.jpg" alt="">
+                    </div>
+                    <div class="s6right">
+                        <div class="bing">
+                            <h3>Chandler Bing.</h3>
+                            <p>CEO at Company.</p>
+                        </div>
+                        <p>No one is better than Jane Doe.</p>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="section7">
+                <div class="price"><h1>My Price</h1></div>
+                <div class="table">
+                    <div class="basic">
+                            <div class="broad1"><h1>Basic</h1></div>
+                            <div class="data">Web Design</div>
+                            <div class="data">Photography</div>
+                            <div class="data">5GB Storage</div>
+                            <div class="data">Mail Support</div>
+                            <div class="broad"><h1>$10</h1>
+                            <p>per month</p></div>
+                            <div class="signup"><a href="">Sign Up</a></div>
+                    </div>
+                    <div class="pro">
+                            <div class="broad2"><h1>Pro</h1></div>
+                            <div class="data">Web Design</div>
+                            <div class="data">Photography</div>
+                            <div class="data">50GB Storage</div>
+                            <div class="data">Endless Support</div>
+                            <div class="broad"><h1>$25</h1>
+                            <p>per month</p></div>
+                            <div class="signup"><a href="">Sign Up</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="section8">
+                <div><h1>Contact Me</h1></div>
+                <div class="contact"><i class="fa-sharp fa-solid fa-location-dot"></i>Chicago, us</div>
+                <div class="contact"><i class="fa-sharp fa-solid fa-phone"></i>Phone: +00151515</div>
+                <div class="contact"><i class="fa-sharp fa-solid fa-envelope"></i>Email:mail@mail.com</div>
+            </div>
+            <div class="section9">
+                <img src="images/map.jpg" alt="">
+            </div>
+            <div class="section9">
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Name">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <input type="text" name="" id="" placeholder="Subject">
+                    <input type="text" name="" id="" placeholder="Message">
+                    <div class="send"><input type="submit" value="send Message"></div>
+                </form>
+            </div>
+            <div class="footer">
+                <ul>
+                    <li><i class="fa-brands fa-square-facebook"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-brands fa-snapchat"></i></li>
+                    <li><i class="fa-brands fa-pinterest-p"></i></li>
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-linkedin"></i></li>
+                </ul>
+                <p>Powered by <a href="">Bootstrap</a></p>
+            </div>
 
         </div>
     </section>
-
 
 </body>
 
